parser.output
   0  $accept : %entry% $end

   1  toplevel : prog EOF

   2  prog : block RETURN exp SEMI

   3  block : vdecls stmts

   4  vdecls : vdecl SEMI vdecls
   5         |

   6  vdecl : typ IDENT EQ exp

   7  typ : TINT

   8  vdecllist :
   9            | vdeclplus

  10  vdeclplus : vdecl
  11            | vdecl COMMA vdeclplus

  12  lhs : IDENT

  13  stmts : stmt stmts
  14        |

  15  stmtOPT :
  16          | stmt

  17  expOPT :
  18         | exp

  19  exp : E4

  20  E4 : E4 BAR E5
  21     | E5

  22  E5 : E5 AMPER E6
  23     | E6

  24  E6 : E6 EQEQ E7
  25     | E6 BANGEQ E7
  26     | E7

  27  E7 : E7 LT E8
  28     | E7 LTEQ E8
  29     | E7 GT E8
  30     | E7 GTEQ E8
  31     | E8

  32  E8 : E8 LTLT E9
  33     | E8 GTGTGT E9
  34     | E8 GTGT E9
  35     | E9

  36  E9 : E9 PLUS E10
  37     | E9 DASH E10
  38     | E10

  39  E10 : E10 STAR E11
  40      | E11

  41  E11 : DASH E11
  42      | BANG E11
  43      | TILDE E11
  44      | E12

  45  E12 : INT
  46      | LPAREN exp RPAREN
  47      | IDENT

  48  stmt : stmt_mIF
  49       | stmt_uIF

  50  stmt_uIF : IF LPAREN exp RPAREN stmt
  51           | IF LPAREN exp RPAREN stmt_mIF ELSE stmt_uIF

  52  stmt_mIF : IF LPAREN exp RPAREN stmt_mIF ELSE stmt_mIF
  53           | lhs EQ exp SEMI
  54           | LBRACE block RBRACE
  55           | WHILE LPAREN exp RPAREN stmt
  56           | FOR LPAREN vdecllist SEMI expOPT SEMI stmtOPT RPAREN stmt

  57  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (57)
	vdecls : .  (5)

	TINT  shift 3
	IDENT  reduce 5
	LBRACE  reduce 5
	IF  reduce 5
	WHILE  reduce 5
	FOR  reduce 5
	RETURN  reduce 5

	toplevel  goto 4
	block  goto 5
	typ  goto 6
	prog  goto 7
	vdecls  goto 8
	vdecl  goto 9


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	typ : TINT .  (7)

	.  reduce 7


state 4
	%entry% : '\001' toplevel .  (57)

	.  reduce 57


state 5
	prog : block . RETURN exp SEMI  (2)

	RETURN  shift 10
	.  error


state 6
	vdecl : typ . IDENT EQ exp  (6)

	IDENT  shift 11
	.  error


state 7
	toplevel : prog . EOF  (1)

	EOF  shift 12
	.  error


state 8
	block : vdecls . stmts  (3)
	stmts : .  (14)

	IDENT  shift 13
	LBRACE  shift 14
	IF  shift 15
	WHILE  shift 16
	FOR  shift 17
	RBRACE  reduce 14
	RETURN  reduce 14

	stmt  goto 18
	stmts  goto 19
	lhs  goto 20
	stmt_mIF  goto 21
	stmt_uIF  goto 22


state 9
	vdecls : vdecl . SEMI vdecls  (4)

	SEMI  shift 23
	.  error


state 10
	prog : block RETURN . exp SEMI  (2)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	.  error

	exp  goto 30
	E4  goto 31
	E5  goto 32
	E6  goto 33
	E7  goto 34
	E8  goto 35
	E9  goto 36
	E10  goto 37
	E11  goto 38
	E12  goto 39


state 11
	vdecl : typ IDENT . EQ exp  (6)

	EQ  shift 40
	.  error


state 12
	toplevel : prog EOF .  (1)

	.  reduce 1


state 13
	lhs : IDENT .  (12)

	.  reduce 12


state 14
	stmt_mIF : LBRACE . block RBRACE  (54)
	vdecls : .  (5)

	TINT  shift 3
	IDENT  reduce 5
	LBRACE  reduce 5
	RBRACE  reduce 5
	IF  reduce 5
	WHILE  reduce 5
	FOR  reduce 5

	block  goto 41
	typ  goto 6
	vdecls  goto 8
	vdecl  goto 9


state 15
	stmt_uIF : IF . LPAREN exp RPAREN stmt  (50)
	stmt_uIF : IF . LPAREN exp RPAREN stmt_mIF ELSE stmt_uIF  (51)
	stmt_mIF : IF . LPAREN exp RPAREN stmt_mIF ELSE stmt_mIF  (52)

	LPAREN  shift 42
	.  error


state 16
	stmt_mIF : WHILE . LPAREN exp RPAREN stmt  (55)

	LPAREN  shift 43
	.  error


state 17
	stmt_mIF : FOR . LPAREN vdecllist SEMI expOPT SEMI stmtOPT RPAREN stmt  (56)

	LPAREN  shift 44
	.  error


state 18
	stmts : stmt . stmts  (13)
	stmts : .  (14)

	IDENT  shift 13
	LBRACE  shift 14
	IF  shift 15
	WHILE  shift 16
	FOR  shift 17
	RBRACE  reduce 14
	RETURN  reduce 14

	stmt  goto 18
	stmts  goto 45
	lhs  goto 20
	stmt_mIF  goto 21
	stmt_uIF  goto 22


state 19
	block : vdecls stmts .  (3)

	.  reduce 3


state 20
	stmt_mIF : lhs . EQ exp SEMI  (53)

	EQ  shift 46
	.  error


state 21
	stmt : stmt_mIF .  (48)

	.  reduce 48


state 22
	stmt : stmt_uIF .  (49)

	.  reduce 49


state 23
	vdecls : vdecl SEMI . vdecls  (4)
	vdecls : .  (5)

	TINT  shift 3
	IDENT  reduce 5
	LBRACE  reduce 5
	RBRACE  reduce 5
	IF  reduce 5
	WHILE  reduce 5
	FOR  reduce 5
	RETURN  reduce 5

	typ  goto 6
	vdecls  goto 47
	vdecl  goto 9


state 24
	E12 : INT .  (45)

	.  reduce 45


state 25
	E12 : IDENT .  (47)

	.  reduce 47


state 26
	E11 : DASH . E11  (41)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	.  error

	E11  goto 48
	E12  goto 39


state 27
	E11 : BANG . E11  (42)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	.  error

	E11  goto 49
	E12  goto 39


state 28
	E12 : LPAREN . exp RPAREN  (46)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	.  error

	exp  goto 50
	E4  goto 31
	E5  goto 32
	E6  goto 33
	E7  goto 34
	E8  goto 35
	E9  goto 36
	E10  goto 37
	E11  goto 38
	E12  goto 39


state 29
	E11 : TILDE . E11  (43)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	.  error

	E11  goto 51
	E12  goto 39


state 30
	prog : block RETURN exp . SEMI  (2)

	SEMI  shift 52
	.  error


state 31
	exp : E4 .  (19)
	E4 : E4 . BAR E5  (20)

	BAR  shift 53
	SEMI  reduce 19
	COMMA  reduce 19
	RPAREN  reduce 19


state 32
	E4 : E5 .  (21)
	E5 : E5 . AMPER E6  (22)

	AMPER  shift 54
	SEMI  reduce 21
	COMMA  reduce 21
	BAR  reduce 21
	RPAREN  reduce 21


state 33
	E5 : E6 .  (23)
	E6 : E6 . EQEQ E7  (24)
	E6 : E6 . BANGEQ E7  (25)

	EQEQ  shift 55
	BANGEQ  shift 56
	SEMI  reduce 23
	COMMA  reduce 23
	BAR  reduce 23
	AMPER  reduce 23
	RPAREN  reduce 23


state 34
	E6 : E7 .  (26)
	E7 : E7 . LT E8  (27)
	E7 : E7 . LTEQ E8  (28)
	E7 : E7 . GT E8  (29)
	E7 : E7 . GTEQ E8  (30)

	GT  shift 57
	GTEQ  shift 58
	LT  shift 59
	LTEQ  shift 60
	SEMI  reduce 26
	COMMA  reduce 26
	EQEQ  reduce 26
	BANGEQ  reduce 26
	BAR  reduce 26
	AMPER  reduce 26
	RPAREN  reduce 26


state 35
	E7 : E8 .  (31)
	E8 : E8 . LTLT E9  (32)
	E8 : E8 . GTGTGT E9  (33)
	E8 : E8 . GTGT E9  (34)

	LTLT  shift 61
	GTGT  shift 62
	GTGTGT  shift 63
	SEMI  reduce 31
	COMMA  reduce 31
	GT  reduce 31
	GTEQ  reduce 31
	LT  reduce 31
	LTEQ  reduce 31
	EQEQ  reduce 31
	BANGEQ  reduce 31
	BAR  reduce 31
	AMPER  reduce 31
	RPAREN  reduce 31


state 36
	E8 : E9 .  (35)
	E9 : E9 . PLUS E10  (36)
	E9 : E9 . DASH E10  (37)

	PLUS  shift 64
	DASH  shift 65
	SEMI  reduce 35
	COMMA  reduce 35
	GT  reduce 35
	GTEQ  reduce 35
	LT  reduce 35
	LTEQ  reduce 35
	EQEQ  reduce 35
	BANGEQ  reduce 35
	BAR  reduce 35
	AMPER  reduce 35
	RPAREN  reduce 35
	LTLT  reduce 35
	GTGT  reduce 35
	GTGTGT  reduce 35


state 37
	E9 : E10 .  (38)
	E10 : E10 . STAR E11  (39)

	STAR  shift 66
	SEMI  reduce 38
	COMMA  reduce 38
	PLUS  reduce 38
	DASH  reduce 38
	GT  reduce 38
	GTEQ  reduce 38
	LT  reduce 38
	LTEQ  reduce 38
	EQEQ  reduce 38
	BANGEQ  reduce 38
	BAR  reduce 38
	AMPER  reduce 38
	RPAREN  reduce 38
	LTLT  reduce 38
	GTGT  reduce 38
	GTGTGT  reduce 38


state 38
	E10 : E11 .  (40)

	.  reduce 40


state 39
	E11 : E12 .  (44)

	.  reduce 44


state 40
	vdecl : typ IDENT EQ . exp  (6)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	.  error

	exp  goto 67
	E4  goto 31
	E5  goto 32
	E6  goto 33
	E7  goto 34
	E8  goto 35
	E9  goto 36
	E10  goto 37
	E11  goto 38
	E12  goto 39


state 41
	stmt_mIF : LBRACE block . RBRACE  (54)

	RBRACE  shift 68
	.  error


state 42
	stmt_uIF : IF LPAREN . exp RPAREN stmt  (50)
	stmt_uIF : IF LPAREN . exp RPAREN stmt_mIF ELSE stmt_uIF  (51)
	stmt_mIF : IF LPAREN . exp RPAREN stmt_mIF ELSE stmt_mIF  (52)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	.  error

	exp  goto 69
	E4  goto 31
	E5  goto 32
	E6  goto 33
	E7  goto 34
	E8  goto 35
	E9  goto 36
	E10  goto 37
	E11  goto 38
	E12  goto 39


state 43
	stmt_mIF : WHILE LPAREN . exp RPAREN stmt  (55)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	.  error

	exp  goto 70
	E4  goto 31
	E5  goto 32
	E6  goto 33
	E7  goto 34
	E8  goto 35
	E9  goto 36
	E10  goto 37
	E11  goto 38
	E12  goto 39


state 44
	stmt_mIF : FOR LPAREN . vdecllist SEMI expOPT SEMI stmtOPT RPAREN stmt  (56)
	vdecllist : .  (8)

	TINT  shift 3
	SEMI  reduce 8

	typ  goto 6
	vdecl  goto 71
	vdecllist  goto 72
	vdeclplus  goto 73


state 45
	stmts : stmt stmts .  (13)

	.  reduce 13


state 46
	stmt_mIF : lhs EQ . exp SEMI  (53)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	.  error

	exp  goto 74
	E4  goto 31
	E5  goto 32
	E6  goto 33
	E7  goto 34
	E8  goto 35
	E9  goto 36
	E10  goto 37
	E11  goto 38
	E12  goto 39


state 47
	vdecls : vdecl SEMI vdecls .  (4)

	.  reduce 4


state 48
	E11 : DASH E11 .  (41)

	.  reduce 41


state 49
	E11 : BANG E11 .  (42)

	.  reduce 42


state 50
	E12 : LPAREN exp . RPAREN  (46)

	RPAREN  shift 75
	.  error


state 51
	E11 : TILDE E11 .  (43)

	.  reduce 43


state 52
	prog : block RETURN exp SEMI .  (2)

	.  reduce 2


state 53
	E4 : E4 BAR . E5  (20)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	.  error

	E5  goto 76
	E6  goto 33
	E7  goto 34
	E8  goto 35
	E9  goto 36
	E10  goto 37
	E11  goto 38
	E12  goto 39


state 54
	E5 : E5 AMPER . E6  (22)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	.  error

	E6  goto 77
	E7  goto 34
	E8  goto 35
	E9  goto 36
	E10  goto 37
	E11  goto 38
	E12  goto 39


state 55
	E6 : E6 EQEQ . E7  (24)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	.  error

	E7  goto 78
	E8  goto 35
	E9  goto 36
	E10  goto 37
	E11  goto 38
	E12  goto 39


state 56
	E6 : E6 BANGEQ . E7  (25)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	.  error

	E7  goto 79
	E8  goto 35
	E9  goto 36
	E10  goto 37
	E11  goto 38
	E12  goto 39


state 57
	E7 : E7 GT . E8  (29)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	.  error

	E8  goto 80
	E9  goto 36
	E10  goto 37
	E11  goto 38
	E12  goto 39


state 58
	E7 : E7 GTEQ . E8  (30)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	.  error

	E8  goto 81
	E9  goto 36
	E10  goto 37
	E11  goto 38
	E12  goto 39


state 59
	E7 : E7 LT . E8  (27)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	.  error

	E8  goto 82
	E9  goto 36
	E10  goto 37
	E11  goto 38
	E12  goto 39


state 60
	E7 : E7 LTEQ . E8  (28)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	.  error

	E8  goto 83
	E9  goto 36
	E10  goto 37
	E11  goto 38
	E12  goto 39


state 61
	E8 : E8 LTLT . E9  (32)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	.  error

	E9  goto 84
	E10  goto 37
	E11  goto 38
	E12  goto 39


state 62
	E8 : E8 GTGT . E9  (34)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	.  error

	E9  goto 85
	E10  goto 37
	E11  goto 38
	E12  goto 39


state 63
	E8 : E8 GTGTGT . E9  (33)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	.  error

	E9  goto 86
	E10  goto 37
	E11  goto 38
	E12  goto 39


state 64
	E9 : E9 PLUS . E10  (36)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	.  error

	E10  goto 87
	E11  goto 38
	E12  goto 39


state 65
	E9 : E9 DASH . E10  (37)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	.  error

	E10  goto 88
	E11  goto 38
	E12  goto 39


state 66
	E10 : E10 STAR . E11  (39)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	.  error

	E11  goto 89
	E12  goto 39


state 67
	vdecl : typ IDENT EQ exp .  (6)

	.  reduce 6


state 68
	stmt_mIF : LBRACE block RBRACE .  (54)

	.  reduce 54


state 69
	stmt_uIF : IF LPAREN exp . RPAREN stmt  (50)
	stmt_uIF : IF LPAREN exp . RPAREN stmt_mIF ELSE stmt_uIF  (51)
	stmt_mIF : IF LPAREN exp . RPAREN stmt_mIF ELSE stmt_mIF  (52)

	RPAREN  shift 90
	.  error


state 70
	stmt_mIF : WHILE LPAREN exp . RPAREN stmt  (55)

	RPAREN  shift 91
	.  error


state 71
	vdeclplus : vdecl .  (10)
	vdeclplus : vdecl . COMMA vdeclplus  (11)

	COMMA  shift 92
	SEMI  reduce 10


state 72
	stmt_mIF : FOR LPAREN vdecllist . SEMI expOPT SEMI stmtOPT RPAREN stmt  (56)

	SEMI  shift 93
	.  error


state 73
	vdecllist : vdeclplus .  (9)

	.  reduce 9


state 74
	stmt_mIF : lhs EQ exp . SEMI  (53)

	SEMI  shift 94
	.  error


state 75
	E12 : LPAREN exp RPAREN .  (46)

	.  reduce 46


state 76
	E4 : E4 BAR E5 .  (20)
	E5 : E5 . AMPER E6  (22)

	AMPER  shift 54
	SEMI  reduce 20
	COMMA  reduce 20
	BAR  reduce 20
	RPAREN  reduce 20


state 77
	E5 : E5 AMPER E6 .  (22)
	E6 : E6 . EQEQ E7  (24)
	E6 : E6 . BANGEQ E7  (25)

	EQEQ  shift 55
	BANGEQ  shift 56
	SEMI  reduce 22
	COMMA  reduce 22
	BAR  reduce 22
	AMPER  reduce 22
	RPAREN  reduce 22


state 78
	E6 : E6 EQEQ E7 .  (24)
	E7 : E7 . LT E8  (27)
	E7 : E7 . LTEQ E8  (28)
	E7 : E7 . GT E8  (29)
	E7 : E7 . GTEQ E8  (30)

	GT  shift 57
	GTEQ  shift 58
	LT  shift 59
	LTEQ  shift 60
	SEMI  reduce 24
	COMMA  reduce 24
	EQEQ  reduce 24
	BANGEQ  reduce 24
	BAR  reduce 24
	AMPER  reduce 24
	RPAREN  reduce 24


state 79
	E6 : E6 BANGEQ E7 .  (25)
	E7 : E7 . LT E8  (27)
	E7 : E7 . LTEQ E8  (28)
	E7 : E7 . GT E8  (29)
	E7 : E7 . GTEQ E8  (30)

	GT  shift 57
	GTEQ  shift 58
	LT  shift 59
	LTEQ  shift 60
	SEMI  reduce 25
	COMMA  reduce 25
	EQEQ  reduce 25
	BANGEQ  reduce 25
	BAR  reduce 25
	AMPER  reduce 25
	RPAREN  reduce 25


state 80
	E7 : E7 GT E8 .  (29)
	E8 : E8 . LTLT E9  (32)
	E8 : E8 . GTGTGT E9  (33)
	E8 : E8 . GTGT E9  (34)

	LTLT  shift 61
	GTGT  shift 62
	GTGTGT  shift 63
	SEMI  reduce 29
	COMMA  reduce 29
	GT  reduce 29
	GTEQ  reduce 29
	LT  reduce 29
	LTEQ  reduce 29
	EQEQ  reduce 29
	BANGEQ  reduce 29
	BAR  reduce 29
	AMPER  reduce 29
	RPAREN  reduce 29


state 81
	E7 : E7 GTEQ E8 .  (30)
	E8 : E8 . LTLT E9  (32)
	E8 : E8 . GTGTGT E9  (33)
	E8 : E8 . GTGT E9  (34)

	LTLT  shift 61
	GTGT  shift 62
	GTGTGT  shift 63
	SEMI  reduce 30
	COMMA  reduce 30
	GT  reduce 30
	GTEQ  reduce 30
	LT  reduce 30
	LTEQ  reduce 30
	EQEQ  reduce 30
	BANGEQ  reduce 30
	BAR  reduce 30
	AMPER  reduce 30
	RPAREN  reduce 30


state 82
	E7 : E7 LT E8 .  (27)
	E8 : E8 . LTLT E9  (32)
	E8 : E8 . GTGTGT E9  (33)
	E8 : E8 . GTGT E9  (34)

	LTLT  shift 61
	GTGT  shift 62
	GTGTGT  shift 63
	SEMI  reduce 27
	COMMA  reduce 27
	GT  reduce 27
	GTEQ  reduce 27
	LT  reduce 27
	LTEQ  reduce 27
	EQEQ  reduce 27
	BANGEQ  reduce 27
	BAR  reduce 27
	AMPER  reduce 27
	RPAREN  reduce 27


state 83
	E7 : E7 LTEQ E8 .  (28)
	E8 : E8 . LTLT E9  (32)
	E8 : E8 . GTGTGT E9  (33)
	E8 : E8 . GTGT E9  (34)

	LTLT  shift 61
	GTGT  shift 62
	GTGTGT  shift 63
	SEMI  reduce 28
	COMMA  reduce 28
	GT  reduce 28
	GTEQ  reduce 28
	LT  reduce 28
	LTEQ  reduce 28
	EQEQ  reduce 28
	BANGEQ  reduce 28
	BAR  reduce 28
	AMPER  reduce 28
	RPAREN  reduce 28


state 84
	E8 : E8 LTLT E9 .  (32)
	E9 : E9 . PLUS E10  (36)
	E9 : E9 . DASH E10  (37)

	PLUS  shift 64
	DASH  shift 65
	SEMI  reduce 32
	COMMA  reduce 32
	GT  reduce 32
	GTEQ  reduce 32
	LT  reduce 32
	LTEQ  reduce 32
	EQEQ  reduce 32
	BANGEQ  reduce 32
	BAR  reduce 32
	AMPER  reduce 32
	RPAREN  reduce 32
	LTLT  reduce 32
	GTGT  reduce 32
	GTGTGT  reduce 32


state 85
	E8 : E8 GTGT E9 .  (34)
	E9 : E9 . PLUS E10  (36)
	E9 : E9 . DASH E10  (37)

	PLUS  shift 64
	DASH  shift 65
	SEMI  reduce 34
	COMMA  reduce 34
	GT  reduce 34
	GTEQ  reduce 34
	LT  reduce 34
	LTEQ  reduce 34
	EQEQ  reduce 34
	BANGEQ  reduce 34
	BAR  reduce 34
	AMPER  reduce 34
	RPAREN  reduce 34
	LTLT  reduce 34
	GTGT  reduce 34
	GTGTGT  reduce 34


state 86
	E8 : E8 GTGTGT E9 .  (33)
	E9 : E9 . PLUS E10  (36)
	E9 : E9 . DASH E10  (37)

	PLUS  shift 64
	DASH  shift 65
	SEMI  reduce 33
	COMMA  reduce 33
	GT  reduce 33
	GTEQ  reduce 33
	LT  reduce 33
	LTEQ  reduce 33
	EQEQ  reduce 33
	BANGEQ  reduce 33
	BAR  reduce 33
	AMPER  reduce 33
	RPAREN  reduce 33
	LTLT  reduce 33
	GTGT  reduce 33
	GTGTGT  reduce 33


state 87
	E9 : E9 PLUS E10 .  (36)
	E10 : E10 . STAR E11  (39)

	STAR  shift 66
	SEMI  reduce 36
	COMMA  reduce 36
	PLUS  reduce 36
	DASH  reduce 36
	GT  reduce 36
	GTEQ  reduce 36
	LT  reduce 36
	LTEQ  reduce 36
	EQEQ  reduce 36
	BANGEQ  reduce 36
	BAR  reduce 36
	AMPER  reduce 36
	RPAREN  reduce 36
	LTLT  reduce 36
	GTGT  reduce 36
	GTGTGT  reduce 36


state 88
	E9 : E9 DASH E10 .  (37)
	E10 : E10 . STAR E11  (39)

	STAR  shift 66
	SEMI  reduce 37
	COMMA  reduce 37
	PLUS  reduce 37
	DASH  reduce 37
	GT  reduce 37
	GTEQ  reduce 37
	LT  reduce 37
	LTEQ  reduce 37
	EQEQ  reduce 37
	BANGEQ  reduce 37
	BAR  reduce 37
	AMPER  reduce 37
	RPAREN  reduce 37
	LTLT  reduce 37
	GTGT  reduce 37
	GTGTGT  reduce 37


state 89
	E10 : E10 STAR E11 .  (39)

	.  reduce 39


state 90
	stmt_uIF : IF LPAREN exp RPAREN . stmt  (50)
	stmt_uIF : IF LPAREN exp RPAREN . stmt_mIF ELSE stmt_uIF  (51)
	stmt_mIF : IF LPAREN exp RPAREN . stmt_mIF ELSE stmt_mIF  (52)

	IDENT  shift 13
	LBRACE  shift 14
	IF  shift 15
	WHILE  shift 16
	FOR  shift 17
	.  error

	stmt  goto 95
	lhs  goto 20
	stmt_mIF  goto 96
	stmt_uIF  goto 22


state 91
	stmt_mIF : WHILE LPAREN exp RPAREN . stmt  (55)

	IDENT  shift 13
	LBRACE  shift 14
	IF  shift 15
	WHILE  shift 16
	FOR  shift 17
	.  error

	stmt  goto 97
	lhs  goto 20
	stmt_mIF  goto 21
	stmt_uIF  goto 22


state 92
	vdeclplus : vdecl COMMA . vdeclplus  (11)

	TINT  shift 3
	.  error

	typ  goto 6
	vdecl  goto 71
	vdeclplus  goto 98


state 93
	stmt_mIF : FOR LPAREN vdecllist SEMI . expOPT SEMI stmtOPT RPAREN stmt  (56)
	expOPT : .  (17)

	INT  shift 24
	IDENT  shift 25
	DASH  shift 26
	BANG  shift 27
	LPAREN  shift 28
	TILDE  shift 29
	SEMI  reduce 17

	exp  goto 99
	expOPT  goto 100
	E4  goto 31
	E5  goto 32
	E6  goto 33
	E7  goto 34
	E8  goto 35
	E9  goto 36
	E10  goto 37
	E11  goto 38
	E12  goto 39


state 94
	stmt_mIF : lhs EQ exp SEMI .  (53)

	.  reduce 53


state 95
	stmt_uIF : IF LPAREN exp RPAREN stmt .  (50)

	.  reduce 50


96: shift/reduce conflict (shift 101, reduce 48) on ELSE
state 96
	stmt : stmt_mIF .  (48)
	stmt_uIF : IF LPAREN exp RPAREN stmt_mIF . ELSE stmt_uIF  (51)
	stmt_mIF : IF LPAREN exp RPAREN stmt_mIF . ELSE stmt_mIF  (52)

	ELSE  shift 101
	IDENT  reduce 48
	LBRACE  reduce 48
	RBRACE  reduce 48
	IF  reduce 48
	WHILE  reduce 48
	FOR  reduce 48
	RETURN  reduce 48
	RPAREN  reduce 48


state 97
	stmt_mIF : WHILE LPAREN exp RPAREN stmt .  (55)

	.  reduce 55


state 98
	vdeclplus : vdecl COMMA vdeclplus .  (11)

	.  reduce 11


state 99
	expOPT : exp .  (18)

	.  reduce 18


state 100
	stmt_mIF : FOR LPAREN vdecllist SEMI expOPT . SEMI stmtOPT RPAREN stmt  (56)
